@@ -2,7 +2,7 @@ Package: PureCN
 Type: Package
 Title: Estimating tumor purity, ploidy, LOH, and SNV status using
         hybrid capture NGS data
-Version: 1.1.3
+Version: 1.1.4
 Date: 2016-05-08
 Author: Markus Riester
 Maintainer: Markus Riester <markus.riester@novartis.com>
