@@ -19,6 +19,7 @@ export(plotBestNormal)
 export(predictSomatic)
 export(plotAbs)
 export(getSexFromCoverage)
+export(getSexFromVcf)
 import(VariantAnnotation)
 import(DNAcopy)
 importFrom("data.table", "data.table")
