@@ -1,7 +1,7 @@
 \name{calculatePowerDetectSomatic}
 \alias{calculatePowerDetectSomatic}
 \title{Power calculation for detecting somatic mutations}
-\description{This function calculcates the probability of correctly 
+\description{This function calculates the probability of correctly 
 rejecting the null hypothesis that an alt allele is a sequencing 
 error rather than a true (mono-)clonal mutation. }
 \usage{calculatePowerDetectSomatic(coverage, f = NULL, purity = NULL, 
@@ -39,7 +39,9 @@ power <- lapply(purity, function(p) sapply(coverage, function(cv)
     verbose=FALSE)$power))
 
 # Figure S7b in Carter et al.
-plot(coverage, power[[1]], col=1, xlab="Sequence coverage", ylab="Detection power", ylim=c(0,1), type="l")
+plot(coverage, power[[1]], col=1, xlab="Sequence coverage", 
+    ylab="Detection power", ylim=c(0,1), type="l")
+
 for (i in 2:length(power)) lines(coverage, power[[i]], col=i)
 abline(h=0.8, lty=2, col="grey")     
 legend("bottomright", legend=paste("Purity", purity), fill=1:length(purity))
@@ -49,7 +51,9 @@ coverage <- seq(5,350,1)
 power <- lapply(purity, function(p) sapply(coverage, function(cv) 
     calculatePowerDetectSomatic(coverage=cv, purity=p, ploidy=2, 
         cell.fraction=0.2, verbose=FALSE)$power))
-plot(coverage, power[[1]], col=1, xlab="Sequence coverage", ylab="Detection power", ylim=c(0,1), type="l")
+plot(coverage, power[[1]], col=1, xlab="Sequence coverage", 
+    ylab="Detection power", ylim=c(0,1), type="l")
+
 for (i in 2:length(power)) lines(coverage, power[[i]], col=i)
 abline(h=0.8, lty=2, col="grey")     
 legend("bottomright", legend=paste("Purity", purity), fill=1:length(purity))
