@@ -1,5 +1,6 @@
 1.2
     - added calculatePowerDetectSomatic
+    - added getSexFromVcf
 
 1.0
     - added correctCoverageBias
